# TLM_Thesis

./: .gitignore  CMakeLists.txt  Cmake.gitignore  GurobiMain.cpp  Gurobi_try_memo.docx  Makefile  README.md  TLM_Thesis  all_path_combine.py  main.cpp  model.cpp  paths_arcs_gen.cpp  replace.sh
Cmake/: FindGurobi.cmake
Data/: A1_10_air_arccost.txt  A1_10_air_flights_param.txt  A1_10_air_profit.txt  A1_10_air_rival_routes.csv  A1_10_air_stopcost.txt  A1_10_air_target_routes.csv  A1_10_air_timecost.txt  A1_10_air_trans_cost.txt  A1_10_cargo.txt  A1_10_sea_arccost.txt  A1_10_sea_profit.txt  A1_10_sea_rival_routes.csv  A1_10_sea_ships_param.txt  A1_10_sea_stopcost.txt  A1_10_sea_target_routes.csv  A1_10_sea_timecost.txt  A1_10_sea_trans_cost.txt  A1_10_unload_cost.txt  A1_10_virtual.txt  A1_1_air_arccost.txt  A1_1_air_profit.txt  A1_1_air_rival_routes.csv  A1_1_air_target_routes.csv  A1_1_sea_arccost.txt  A1_1_sea_profit.txt  A1_1_sea_timecost.txt  A1_1_sea_trans_cost.txt  A1_2_air_arccost.txt  A1_2_air_flights_param.txt  A1_2_air_profit.txt  A1_2_air_rival_routes.csv  A1_2_air_stopcost.txt  A1_2_air_target_routes.csv  A1_2_air_timecost.txt  A1_2_air_trans_cost.txt  A1_2_cargo.txt  A1_2_sea_arccost.txt  A1_2_sea_profit.txt  A1_2_sea_rival_routes.csv  A1_2_sea_ships_param.txt  (+779 more)
Lable_selection_method/: LSM.cpp  LSM.h  LSM_main.cpp
Test/: CMakeLists.txt  NodeTest.cpp  networkTest.cpp  testMain.cpp
model_data/: check_ij_path.txt  f_Ga_arc.txt  f_Gd_arc.txt  f_Gs_arc.txt  f_eGa_arc.txt  f_eGs_arc.txt  f_global_var.txt  f_graph.txt  f_k.txt  f_line.txt  f_ports.txt  info_k_path.txt  info_scenario.txt  utility.txt
results/: Result_A.txt  Result_A1.txt  Result_B.txt  Result_C.txt  Result_D.txt  Result_DW_A.txt  Result_DW_A1.txt  Result_DW_A1_1.txt  Result_DW_A1_10.txt  Result_DW_A1_2.txt  Result_DW_A1_3.txt  Result_DW_A1_4.txt  Result_DW_A1_4_v_profile.txt  Result_DW_A1_5.txt  Result_DW_A1_6.txt  Result_DW_A1_7.txt  Result_DW_A1_8.txt  Result_DW_A1_9.txt  Result_DW_A1_9_v_profile.txt  Result_DW_A1_v_profile.txt  Result_DW_A2.txt  Result_DW_A2_1.txt  Result_DW_A2_10.txt  Result_DW_A2_2.txt  Result_DW_A2_3.txt  Result_DW_A2_4.txt  Result_DW_A2_5.txt  Result_DW_A2_6.txt  Result_DW_A2_7.txt  Result_DW_A2_8.txt  Result_DW_A2_9.txt  Result_DW_A3.txt  Result_DW_A3_1.txt  Result_DW_A3_2.txt  Result_DW_A3_3.txt  Result_DW_A3_4.txt  Result_DW_A3_5.txt  Result_DW_A4.txt  Result_DW_A5.txt  Result_DW_A5_v_profile.txt  (+80 more)
src/: AirNetwork.cpp  AirNetwork.h  Arc.cpp  Arc.h  BB_node.cpp  BB_node.h  BPGurobiModelSolution.cpp  BPGurobiModelSolution.hpp  Cargo.cpp  CargoRoute.cpp  CargoRoute.h  Dantzig_wolfe.bak.cpp  Dantzig_wolfe.cpp  Dantzig_wolfe.h  Dijkstra.cpp  Dijkstra.h  EntireNetwork.cpp  EntireNetwork.h  GurobiModel.cpp  GurobiModel.h  Gurobi_try.cpp  Network.cpp  Network.h  Node.cpp  Node.h  Path.cpp  Point.cpp  SeaNetwork.cpp  SeaNetwork.h  Solution.cpp  TLMLogger.cpp  TLMLogger.hpp  hash.cpp  hash.hpp  param.h
